--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
       <h1>Welcome to My Website</h1>
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About Us</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About Us</a></li>
           <li><a href="#">Contact Us</a></li>
         </ul>
       </nav>
     </header>
     <main>
       <section>
-        <h2>About Us</h2>
+        <h2>Welcome to Grand Line Entertainment</h2>
         <p>Grand Line Entertainment is a company that specializes in bringing creative ideas to life. We are a team of experienced and passionate writers who collaborate closely with our clients to deliver outstanding results.</p>
         <p>Whether you need help with scriptwriting, storyboarding, or content creation, we have the expertise and creativity to help you achieve your goals. We are committed to delivering high-quality work that exceeds your expectations.</p>
       </section>
