--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Website</title>
+    <meta charset="utf-8">
+    <title>Grand Line Entertainment</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
-      <h1>Welcome to My Website</h1>
+      <h1>Grand Line Entertainment</h1>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="#">Home</a></li>
           <li><a href="about.html">About Us</a></li>
-          <li><a href="#">Contact Us</a></li>
         </ul>
       </nav>
     </header>
     <main>
       <section>
         <h2>Welcome to Grand Line Entertainment</h2>
-        <p>Grand Line Entertainment is a company that specializes in bringing creative ideas to life. We are a team of experienced and passionate writers who collaborate closely with our clients to deliver outstanding results.</p>
-        <p>Whether you need help with scriptwriting, storyboarding, or content creation, we have the expertise and creativity to help you achieve your goals. We are committed to delivering high-quality work that exceeds your expectations.</p>
+        <p>We are a company that specializes in bringing stories to life. Our team of experienced and passionate writers work collaboratively to create content that captivates and inspires our audience.</p>
       </section>
     </main>
     <footer>
-      <p>&copy; 2023 Grand Line Entertainment. All rights reserved.</p>
+      <p>&copy; 2023 Grand Line Entertainment</p>
     </footer>
   </body>
 </html>
