--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Grand Line Entertainment - About Us</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<header>
@@ -12,15 +13,11 @@
 
 	<main>
 		<h2>About Us</h2>
-		<p>Welcome to Grand Line Entertainment!</p>
-		<p>We are a creative content production company that focuses on bringing ideas to life in the form of movies, TV shows, and other media. Our team of experienced and new writers work collaboratively to create engaging and unique content that resonates with audiences around the world.</p>
+		<p>Welcome to Grand Line Entertainment! We are a creative content production company that focuses on bringing ideas to life in the form of movies, TV shows, and other media. Our team of experienced and new writers work collaboratively to create engaging and unique content that resonates with audiences around the world.</p>
 		<p>Our goal is to bring fresh, innovative ideas to the entertainment industry, and we believe that the key to achieving this is by fostering a collaborative work environment where all ideas are welcomed and valued. We are always looking for new voices and perspectives to add to our team, and we strive to create a diverse and inclusive workplace where everyone can thrive.</p>
 		<p>At Grand Line Entertainment, we are passionate about storytelling and dedicated to delivering high-quality content that connects with audiences on an emotional level. Whether it's a heartwarming drama or an action-packed adventure, we believe that every story has the power to inspire, entertain, and enrich people's lives.</p>
 		<p>We are committed to working with talented writers who share our vision and values, and we are always on the lookout for new partnerships and collaborations. If you are a writer looking to bring your ideas to life, we encourage you to get in touch with us and see what we can create together.</p>
 	</main>
 
 	<footer>
-		<p>Copyright © 2023 Grand Line Entertainment. All rights reserved.</p>
-	</footer>
-</body>
-</html>
+		<p>&copy; 2023 Grand Line Entertainment. All rights
