--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Grand Line Entertainment - About Us</title>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>About Grand Line Entertainment</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<header>
-		<h1>Grand Line Entertainment</h1>
+		<nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+		</nav>
 	</header>
-
 	<main>
-		<h2>About Us</h2>
-		<p>Welcome to Grand Line Entertainment! We are a creative content production company that focuses on bringing ideas to life in the form of movies, TV shows, and other media. Our team of experienced and new writers work collaboratively to create engaging and unique content that resonates with audiences around the world.</p>
-		<p>Our goal is to bring fresh, innovative ideas to the entertainment industry, and we believe that the key to achieving this is by fostering a collaborative work environment where all ideas are welcomed and valued. We are always looking for new voices and perspectives to add to our team, and we strive to create a diverse and inclusive workplace where everyone can thrive.</p>
-		<p>At Grand Line Entertainment, we are passionate about storytelling and dedicated to delivering high-quality content that connects with audiences on an emotional level. Whether it's a heartwarming drama or an action-packed adventure, we believe that every story has the power to inspire, entertain, and enrich people's lives.</p>
-		<p>We are committed to working with talented writers who share our vision and values, and we are always on the lookout for new partnerships and collaborations. If you are a writer looking to bring your ideas to life, we encourage you to get in touch with us and see what we can create together.</p>
+		<section class="about">
+			<h1>About Grand Line Entertainment</h1>
+			<p>Welcome to Grand Line Entertainment, where we are passionate about storytelling and dedicated to creating new and engaging stories for both new and old audiences alike. Our mission is to provide entertainment that is not only enjoyable, but also thought-provoking and emotionally engaging.</p>
+			<p>At Grand Line Entertainment, we believe that stories have the power to connect people and bring them together. We strive to create characters and worlds that are relatable and captivating, leaving a lasting impression on our audiences.</p>
+			<p>We understand the importance of diversity and inclusivity in storytelling. That's why we make it a priority to work with writers from all backgrounds to ensure that our stories represent a wide range of perspectives and experiences.</p>
+			<p>Our team of talented writers is dedicated to bringing our stories to life, and we are always on the lookout for new talent to join our team. If you are a writer with a passion for storytelling, we invite you to reach out to us and explore the possibility of working with us.</p>
+			<p>Thank you for visiting Grand Line Entertainment. We hope that our stories will touch your heart and inspire your imagination.</p>
+		</section>
 	</main>
-
 	<footer>
-		<p>&copy; 2023 Grand Line Entertainment. All rights
+		<p>&copy; 2023 Grand Line Entertainment. All rights reserved.</p>
+	</footer>
+</body>
+</html>
