--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>About Grand Line Entertainment</title>
+	<title>Grand Line Entertainment</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
