--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
 <body>
 	<main>
 		<section class="about">
-			<p>Welcome to Grand Line Entertainment, where we are passionate about storytelling and dedicated to creating new and engaging stories for both new and old audiences alike. Our mission is to provide entertainment that is not only enjoyable, but also thought-provoking and emotionally engaging.</p>
-			<p>At Grand Line Entertainment, we believe that stories have the power to connect people and bring them together. We strive to create characters and worlds that are relatable and captivating, leaving a lasting impression on our audiences.</p>
-			<p>We understand the importance of diversity and inclusivity in storytelling. That's why we make it a priority to work with writers from all backgrounds to ensure that our stories represent a wide range of perspectives and experiences.</p>
-			<p>Our team of talented writers is dedicated to bringing our stories to life, and we are always on the lookout for new talent to join our team. If you are a writer with a passion for storytelling, we invite you to reach out to us and explore the possibility of working with us.</p>
-			<p>Thank you for visiting Grand Line Entertainment. We hope that our stories will touch your heart and inspire your imagination.</p>
+			<h2>About Us</h2>
+			<p>Welcome to <strong>Grand Line Entertainment</strong>, where we are passionate about <strong>storytelling</strong> and dedicated to creating new and engaging stories for both new and old audiences alike. Our mission is to provide entertainment that is not only enjoyable, but also thought-provoking and emotionally engaging.</p>
+			<p>At <strong>Grand Line Entertainment</strong>, we believe that <strong>stories</strong> have the power to connect people and bring them together. We strive to create <strong>characters</strong> and <strong>worlds</strong> that are relatable and captivating, leaving a lasting impression on our audiences.</p>
+			<p>We understand the importance of <strong>diversity</strong> and <strong>inclusivity</strong> in storytelling. That's why we make it a priority to work with writers from all backgrounds to ensure that our stories represent a wide range of perspectives and experiences.</p>
+			<p>Our team of talented writers is dedicated to bringing our stories to life, and we are always on the lookout for new talent to join our team. If you are a writer with a passion for <strong>storytelling</strong>, we invite you to reach out to us and explore the possibility of working with us.</p>
+			<p>Thank you for visiting <strong>Grand Line Entertainment</strong>. We hope that our stories will touch your heart and inspire your imagination.</p>
+		</section>
+		<section class="innovative-content">
+			<h2>Innovative Content</h2>
+			<p>At <strong>Grand Line Entertainment</strong>, we are dedicated to creating <strong>innovative</strong> content that pushes the boundaries of traditional storytelling. Our <strong>business model</strong> is centered around hiring writers who can bring fresh and unique ideas to the table.</p>
+			<p>We are committed to providing our audiences with <strong>engaging</strong> and <strong>thought-provoking</strong> content that leaves a lasting impression. Whether it's through our <strong>films</strong>, <strong>television shows</strong>, or <strong>books</strong>, we strive to create entertainment that resonates with people on a deep and emotional level.</p>
+			<p>Our team of writers is constantly exploring new ways to tell stories, whether it's through innovative <strong>story structures</strong>, <strong>narrative techniques</strong>, or <strong>visual styles</strong>. We believe that the future of storytelling lies in pushing the boundaries of what is possible, and we are dedicated to leading the way.</p>
 		</section>
 	</main>
 	<footer>
