--- a/index.html
+++ b/index.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Grand Line Entertainment</title>
-  <link rel="stylesheet" href="style.css">
+	<title>Grand Line Entertainment</title>
 </head>
 <body>
-  <main>
-    <section class="about">
-      <p>Welcome to Grand Line Entertainment, where we are passionate about storytelling and dedicated to creating new and engaging stories for both new and old audiences alike. Our mission is to provide entertainment that is not only enjoyable, but also thought-provoking and emotionally engaging.</p>
-      <p>At Grand Line Entertainment, we believe that stories have the power to connect people and bring them together. We strive to create characters and worlds that are relatable and captivating, leaving a lasting impression on our audiences.</p>
-      <p>We understand the importance of diversity and inclusivity in storytelling. That's why we make it a priority to work with writers from all backgrounds to ensure that our stories represent a wide range of perspectives and experiences.</p>
-    </section>
-    <section class="business-model">
-      <h2>Our Business Model</h2>
-      <p>At Grand Line Entertainment, we are dedicated to finding and hiring talented writers who can help us create new stories that will resonate with audiences. We provide our writers with the resources they need to bring their ideas to life, and we work closely with them throughout the creative process to ensure that our stories are of the highest quality.</p>
-      <p>We are committed to creating content that is both innovative and entertaining. Our goal is to push the boundaries of what is possible in storytelling, and to create stories that are truly unforgettable.</p>
-    </section>
-    <section class="innovative-content">
-      <h2>Innovative Content</h2>
-      <p>We believe that storytelling is an art form, and that the best stories are those that challenge and inspire us. That's why we are always pushing ourselves to create content that is fresh, exciting, and thought-provoking.</p>
-      <p>Our team of writers is constantly exploring new ideas and experimenting with new forms of storytelling, from interactive narratives to immersive experiences. We are always looking for new ways to engage our audiences and to create content that is truly innovative.</p>
-    </section>
-  </main>
-  <footer>
-    <p>&copy; 2023 Grand Line Entertainment. All rights reserved.</p>
-  </footer>
+	<header>
+		<h1>About Grand Line Entertainment</h1>
+		<nav>
+	</header>
+<main>
+	<section>
+		<h2>Our Mission</h2>
+		<p>Grand Line Entertainment is dedicated to creating compelling and engaging stories that resonate with both new and old audiences. We believe that great storytelling has the power to transport people to new worlds and inspire them to see things in a different way. Our mission is to bring these stories to life and share them with the world.</p>
+	</section>
+
+	<section>
+		<h2>Our Team</h2>
+		<p>At Grand Line Entertainment, we are passionate about storytelling. Our team is made up of talented writers and creatives who share this passion and are dedicated to creating the best stories possible. We believe that diversity is key to great storytelling, and our team represents a wide range of backgrounds and experiences.</p>
+	</section>
+
+	<section>
+		<h2>Our Process</h2>
+		<p>When creating a new story, we take a collaborative approach. Our team of writers and creatives work closely together to develop the plot, characters, and themes of the story. We believe that this collaborative process allows us to create stories that are more engaging and compelling. Once the story is developed, we work hard to bring it to life through high-quality writing, art, and animation.</p>
+	</section>
+</main>
+
+<footer>
+	<p>&copy; 2023 Grand Line Entertainment</p>
+</footer>
 </body>
 </html>
 
