Simplify layout: remove duplicate Mission; switch to reader-first layout

--- a/index.html
+++ b/index.html
@@ -50,12 +50,22 @@
 
     <section id="process" class="section">
         <h2 data-i18n="process_title">How We Work</h2>
-        <p data-i18n="process_intro">Our process is evolving, but it always starts with something genuine — a spark that makes us care. We build each project from the ground up, keeping the story, characters, and audience at the center.</p>
-        <p data-i18n="process_step1"><strong>Start with the idea:</strong> Something simple, honest, and worth telling.</p>
-        <p data-i18n="process_step2"><strong>Shape it for scale:</strong> We design around what we have — people, places, and resources — so the story drives the production, not the other way around.</p>
-        <p data-i18n="process_step3"><strong>Stay agile:</strong> Small teams, short shoots, smart planning. We work lean and adapt quickly.</p>
-        <p data-i18n="process_step4"><strong>Finish with craft:</strong> Even with limited budgets, we give time to edit, sound, and color — because small films deserve care too.</p>
-        <p data-i18n="process_outro">We’re constantly refining how we work, learning from every project, and building a process that feels true to the indie spirit — efficient, creative, and collaborative.</p>
+        <p class="panel" data-i18n="process_intro">Our process is evolving, but it always starts with something genuine — a spark that makes us care. We build each project from the ground up, keeping the story, characters, and audience at the center.</p>
+        <ol class="steps">
+            <li>
+                <span class="step-title" data-i18n="process_step1">Start with the idea: Something simple, honest, and worth telling.</span>
+            </li>
+            <li>
+                <span class="step-title" data-i18n="process_step2">Shape it for scale: We design around what we have — people, places, and resources — so the story drives the production, not the other way around.</span>
+            </li>
+            <li>
+                <span class="step-title" data-i18n="process_step3">Stay agile: Small teams, short shoots, smart planning. We work lean and adapt quickly.</span>
+            </li>
+            <li>
+                <span class="step-title" data-i18n="process_step4">Finish with craft: Even with limited budgets, we give time to edit, sound, and color — because small films deserve care too.</span>
+            </li>
+        </ol>
+        <p class="muted" data-i18n="process_outro">We’re constantly refining how we work, learning from every project, and building a process that feels true to the indie spirit — efficient, creative, and collaborative.</p>
     </section>
 
     <section id="team" class="section">
